--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,19 +16,21 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    buildToolsVersion '26.0.2'
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-//    implementation 'com.android.support.constraint:constraint-layout:2.0.1'
-//    implementation 'com.android.support.constraint:constraint-layout:2.0.1'
-//    testImplementation 'junit:junit:4.12'
-//    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-//    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'// implementation 'com.android.support.constraint:constraint-layout:2.0.1'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    //    implementation 'com.android.support.constraint:constraint-layout:2.0.1'
+    //    implementation 'com.android.support.constraint:constraint-layout:2.0.1'
+    //    testImplementation 'junit:junit:4.12'
+    //    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    //    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'// implementation 'com.android.support.constraint:constraint-layout:2.0.1'
     //   implementation 'com.android.support.constraint:constraint-layout:2.0.1'
     //   implementation 'com.android.support.constraint:constraint-layout:2.0.1'
     //   implementation 'com.android.support.constraint:constraint-layout:2.0.1'
-//    implementation 'com.android.support.constraint:constraint-layout:2.0.1'
-//    implementation 'com.android.support.constraint:constraint-layout:2.0.2'
-   // implementation 'com.android.support.constraint:constraint-layout:2.0.4'
+    //    implementation 'com.android.support.constraint:constraint-layout:2.0.1'
+    //    implementation 'com.android.support.constraint:constraint-layout:2.0.2'
+    // implementation 'com.android.support.constraint:constraint-layout:2.0.4'
+    //implementation 'com.android.support.constraint:constraint-layout:2.0.4'
 }
